# kyberdiv

./: README.md
demo1/: README.md  demo-pi2.sh  demo1-pi2.sh  kyberslash-pi2.c
demo2/: README.md  m4.py  requirements.txt
demo2/key_recovery/: CMakeLists.txt  README.md
demo2/key_recovery/gen_challenges/: CMakeLists.txt  gen_ciphertexts.c  sca_indcpa.c  udiv_leakage.h
demo2/key_recovery/gen_challenges/kyber768/: rng.c
demo2/key_recovery/scripts/: key_recovery.py  prepare_timing_experiment.py
demo2/m4/: .gitignore  Makefile  hal-opencm3.c  hal.h  measure.py
demo2/m4/test/: bench.c
demo2/m4remote/: measure.py
demo2/m4remote/attacker/: Makefile  hal-opencm3.c  hal.h  test.c
demo2/m4remote/victim/: Makefile  hal-opencm3.c  hal.h  libopencm3  test.c
demo2/m4remote/victim/kyber/: poly.c
valgrind/: README.md  valgrind-3.22.0-varlat-memcheck-h-only.patch  valgrind-3.22.0-varlat.patch  valgrind-varlat-patch-20240808.txt
